# RAG-Eval-Masterclass

./: .gitignore  Makefile  README.md  chat_interface.html  cloudbase-testfragen.csv  collect.py  eval_review.html  main.py  pyproject.toml  requirements.txt  run_evaluation.py  run_evaluation_llm.py  start_server.sh
data/: abrechnung-kuendigung.md  fehlerbehebung.md  integrationen.md  onboarding-login.md  produkt-enterprise.md  produkt-professional.md  produkt-starter.md  team-berechtigungen.md
